tests/ui/reborrow/coerce-shared-decl-macro-hygiene.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-decl-macro-hygiene.rs:24:14
   |
LL |     impl<'a> CoerceShared<MyRef<'a>> for MyMut<'a> {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^
...
LL | my_macro!(field);
   | ---------------- in this macro invocation
   |
   = note: this error originates in the macro `my_macro` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

